--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>hello</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
